# ChangeLog for perl-core/CGI
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/CGI/ChangeLog,v 1.11 2006/02/07 20:59:34 blubb Exp $

  07 Feb 2006; Simon Stelling <blubb@gentoo.org> CGI-3.10.ebuild:
  stable on amd64

  04 Feb 2006; <solar@gentoo.org> :
  - redigest needed due to bad RMD160. bug #121124

  01 Feb 2006; Aron Griffis <agriffis@gentoo.org> CGI-3.10.ebuild:
  Mark 3.10 stable on ia64

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> CGI-3.10.ebuild:
  Mark 3.10 stable on alpha

*CGI-3.15 (22 Jan 2006)

  22 Jan 2006; Michael Cummings <mcummings@gentoo.org> +CGI-3.15.ebuild:
  Version bump

  21 Jan 2006; Markus Rothe <corsair@gentoo.org> CGI-3.10.ebuild:
  Stable on ppc64

  15 Jan 2006; Michael Hanselmann <hansmi@gentoo.org> CGI-3.10.ebuild:
  Stable on ppc.

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org> CGI-3.10.ebuild:
  Marking sparc x86 stable

*CGI-3.05 (24 May 2005)

  24 May 2005; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +CGI-3.05.ebuild, +CGI-3.07.ebuild, +CGI-3.09.ebuild, +CGI-3.10.ebuild:
  Category migration from dev-perl to perl-core

*CGI-3.10 (17 May 2005)

  17 May 2005; Michael Cummings <mcummings@gentoo.org> +CGI-3.10.ebuild:
  New version, bug 92948, mod_perl2 fixes

*CGI-3.09 (09 May 2005)

  09 May 2005; Elfyn McBratney <beu@gentoo.org> +CGI-3.09.ebuild:
  Version bump.

  02 Apr 2005; Michael Cummings <mcummings@gentoo.org> CGI-3.00.ebuild,
  CGI-3.04.ebuild:
  Fixing perl deps to reflect bundled versions

  02 Apr 2005; Michael Cummings <mcummings@gentoo.org> -CGI-2.81.ebuild,
  -CGI-2.93.ebuild, -CGI-2.97.ebuild, -CGI-2.98.ebuild, -CGI-2.99.ebuild:
  Cleaning out old versions. Perl 5.8.2, our bottom base, came with CGI-3.00 -
  any ebuilds for older versions are therefor suspect.

  01 Apr 2005; Aron Griffis <agriffis@gentoo.org> CGI-3.05.ebuild:
  stable on ia64

  24 Mar 2005; Joseph Jezak <josejx@gentoo.org> CGI-3.05.ebuild: