@@ -1,6 +1,9 @@
 # ChangeLog for virtual/perl-CGI
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-CGI/ChangeLog,v 1.5 2006/02/16 19:36:45 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-CGI/ChangeLog,v 1.6 2006/02/23 22:01:39 mcummings Exp $
+
+  23 Feb 2006; Michael Cummings <mcummings@gentoo.org> perl-CGI-3.15.ebuild:
+  Unmasking for sparc and x86
 
   13 Feb 2006; Michael Cummings <mcummings@gentoo.org> perl-CGI-3.05.ebuild,
   perl-CGI-3.07.ebuild, perl-CGI-3.09.ebuild, perl-CGI-3.10.ebuild,
